--- a/index.htm
+++ b/index.htm
@@ -648,7 +648,7 @@
                 admin: "Umlawuli",
                 getTicket: "Thola Itikethi Lakho",
                 fullName: "Igama Lakho Eliphelele:",
-                enterFullName: "isb., John Doe",
+                enterFullName: "isb., Nathi Zakwe",
                 chooseService: "Khetha Insizakalo:",
                 pleaseSelect: "-- Sicela Ukhethe --",
                 licenseRenewal: "Ukuvuselelwa Kwelayisense",
@@ -701,7 +701,7 @@
                 admin: "Umlawuli",
                 getTicket: "Fumana Itikiti Yakho",
                 fullName: "Igama Lakho Elipheleleyo:",
-                enterFullName: "umz., John Doe",
+                enterFullName: "umz., Nathi Zakwe",
                 chooseService: "Khetha Inkonzo:",
                 pleaseSelect: "-- Nceda Khetha --",
                 licenseRenewal: "Ukuvuselelwa kweLayisense",
@@ -754,7 +754,7 @@
                 admin: "Admin",
                 getTicket: "Kry Jou Kaartjie",
                 fullName: "Jou Volle Naam:",
-                enterFullName: "bv., John Doe",
+                enterFullName: "bv., Nathi Zakwe",
                 chooseService: "Kies 'n Diens:",
                 pleaseSelect: "-- Kies Asseblief --",
                 licenseRenewal: "Lisensie Hernuwing",
@@ -807,7 +807,7 @@
                 admin: "Molaoli",
                 getTicket: "Fumana Tikete ea Hao",
                 fullName: "Lebitso la Hao le Feletseng:",
-                enterFullName: "mohl., John Doe",
+                enterFullName: "mohl., Nathi Zakwe",
                 chooseService: "Khetha Tshebeletso:",
                 pleaseSelect: "-- Ka kopo Khetha --",
                 licenseRenewal: "Ngoliso ya Layisense",
@@ -860,7 +860,7 @@
                 admin: "Molaodi",
                 getTicket: "Iponele Tikiti ya gago",
                 fullName: "Leina la gago la Botlalo:",
-                enterFullName: "sek., John Doe",
+                enterFullName: "sek., Nathi Zakwe",
                 chooseService: "Kgetha Tirelo:",
                 pleaseSelect: "-- Tsweetswee Kgetha --",
                 licenseRenewal: "Ngoliso ya Layesense",
@@ -1472,4 +1472,5 @@
         });
     </script>
 </body>
+
 </html>
