--- a/index.htm
+++ b/index.htm
@@ -595,7 +595,7 @@
                 admin: "Admin",
                 getTicket: "Get Your Ticket",
                 fullName: "Your Full Name:",
-                enterFullName: "e.g., John Doe",
+                enterFullName: "e.g., Nathi Zakwe",
                 chooseService: "Choose a Service:",
                 pleaseSelect: "-- Please Select --",
                 licenseRenewal: "License Renewal",
@@ -1474,3 +1474,4 @@
 </body>
 
 </html>
+
